; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_pci.c_pci_restore_pcix_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_pci.c_pci_restore_pcix_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.pci_cap_saved_state = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@PCI_CAP_ID_PCIX = common dso_local global i32 0, align 4
@PCI_X_CMD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @pci_restore_pcix_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pci_restore_pcix_state(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_cap_saved_state*, align 8
  %6 = alloca i32*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  store i32 0, i32* %3, align 4
  %7 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %8 = load i32, i32* @PCI_CAP_ID_PCIX, align 4
  %9 = call %struct.pci_cap_saved_state* @pci_find_saved_cap(%struct.pci_dev* %7, i32 %8)
  store %struct.pci_cap_saved_state* %9, %struct.pci_cap_saved_state** %5, align 8
  %10 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %11 = load i32, i32* @PCI_CAP_ID_PCIX, align 4
  %12 = call i32 @pci_find_capability(%struct.pci_dev* %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load %struct.pci_cap_saved_state*, %struct.pci_cap_saved_state** %5, align 8
  %14 = icmp ne %struct.pci_cap_saved_state* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  %17 = icmp sle i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15, %1
  br label %37

19:                                               ; preds = %15
  %20 = load %struct.pci_cap_saved_state*, %struct.pci_cap_saved_state** %5, align 8
  %21 = getelementptr inbounds %struct.pci_cap_saved_state, %struct.pci_cap_saved_state* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  store i32* %24, i32** %6, align 8
  %25 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %26 = load i32, i32* %4, align 4
  %27 = sext i32 %26 to i64
  %28 = load i64, i64* @PCI_X_CMD, align 8
  %29 = add nsw i64 %27, %28
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %3, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %3, align 4
  %33 = sext i32 %31 to i64
  %34 = getelementptr inbounds i32, i32* %30, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @pci_write_config_word(%struct.pci_dev* %25, i64 %29, i32 %35)
  br label %37

37:                                               ; preds = %19, %18
  ret void
}

declare dso_local %struct.pci_cap_saved_state* @pci_find_saved_cap(%struct.pci_dev*, i32) #1

declare dso_local i32 @pci_find_capability(%struct.pci_dev*, i32) #1

declare dso_local i32 @pci_write_config_word(%struct.pci_dev*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
